--- a/async_example.ipynb
+++ b/async_example.ipynb
@@ -135,13 +135,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (Pyodide)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
-    "name": "python",
+    "name": "ipython",
     "version": 3
    },
    "file_extension": ".py",
@@ -149,7 +149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8"
+   "version": "3.13.4"
   }
  },
  "nbformat": 4,
